# eFBL-demo-implementation

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG  LICENSE  README.md  pyproject.toml  setup.cfg  test_authentication.py  test_payload.json  usage_example.py
efbl/: auth.py  cli_output.py  document.py
