[tool.poetry]
name = "efbl"
version = "0.1.0"
description = ""
authors = ["Gregory Favre <greg@beyondthewall.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.21.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
